Revision history for App-Cmd

{{$NEXT}}

        - add 'show_version_cmd' option to enable display of 'version'
          command in command list. (John Anderson)

0.327     2015-02-23 20:05:00-05:00 America/New_York
        - fix behavior of default command under subdispatch (thanks, Stephen
          Caldwell and Diab Jerius!)
        - simplify help and commands commands (thanks, Sergey Romanov)
        - drop some advice that we didn't feel great about (thanks, Karen
          Etheridge)

0.326     2014-11-30 08:48:29-05:00 America/New_York
          fix the path fix because it was broken by a related fix in EUMM

0.325     2014-11-29 20:48:34-05:00 America/New_York
          fix a path-related test failure on Win32 (thanks, A. Sinan Unur!)

0.324     2014-10-20 18:22:25-04:00 America/New_York
          note that `cmd help` can take a subcommand in `cmd help help`

0.323     2013-12-07 08:46:51 America/New_York
          fall back to "(unknown)" for command abstract in more cases (thanks,
          Jakob Voss!)

0.322     2013-10-28 08:00:35 America/New_York
          require a newer Getopt::Long to avoid --version conflicts

0.321     2013-10-26 07:44:19 America/New_York
          avoiding getting [undef] in argument list in Simple apps

          add --version support via version command (thanks, Jakob Voss!)

0.320     2013-01-30 19:37:46 America/New_York
          when answering "Unknown subcommand," the commands list is sent ot
          STDERR (#75652)

          tests for using Params::Validate callback and not getting nasty stack
          trace (thanks, Adam Prime)

0.319     2013-01-25 18:18:21 America/New_York
          Enable --help option for App::Cmd::Simple (thanks, Ryan Thompson!)

          add the ability to ignore non-commands (Thanks, Kent Fredric!)

          many improvements to tutorial (thanks, mokko!)

0.318     2012-05-04 22:00:34 America/New_York
          App::Cmd::Tester treats undef code as 0 now (thanks, David Golden)
